--- a/example/pom.xml
+++ b/example/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>example</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>SoftDelete :: Example</name>
+    <name>SoftDelete :: example</name>
 
     <parent>
         <groupId>com.example</groupId>
