--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -6,4 +6,21 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
+    properties:
+      hibernate:
+        ejb:
+          interceptor: com.example.interceptor.JoinTableInterceptor
+
+---
+profiles: mysql
+spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3306/Test?user=root
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+        ddl-auto: none
     show-sql: true
