--- a/it/pom.xml
+++ b/it/pom.xml
@@ -31,7 +31,7 @@
             <groupId>com.example</groupId>
             <artifactId>example</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -70,6 +70,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
+                            <skip>true</skip>
                             <mainClass>org.h2.tools.Server</mainClass>
                             <arguments>
                                 <argument>-tcp</argument>
@@ -87,6 +88,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
+                            <skip>true</skip>
                             <mainClass>org.h2.tools.Server</mainClass>
                             <arguments>
                                 <argument>-tcpShutdown</argument>
@@ -97,21 +99,72 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <skip>false</skip>
+                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
                         <id>deploy</id>
-                        <!--<phase>pre-integration-test</phase>-->
+                        &lt;!&ndash;<phase>pre-integration-test</phase>&ndash;&gt;
                         <goals>
                             <goal>run</goal>
+                            &lt;!&ndash; <goal>start</goal> &ndash;&gt;
                         </goals>
                         <configuration>
                             <classesDirectory>../example/target/classes</classesDirectory>
+                            &lt;!&ndash; <folders>../example/target/classes</folders> &ndash;&gt;
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.example</groupId>
+                        <artifactId>softdelete</artifactId>
+                        <version>1.0.0-SNAPSHOT</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <testIncludes>
+                        <testInclude>softdelete</testInclude>
+                    </testIncludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <mainClass>com.example.Application</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>deploy-start</id>
+                        <!--<phase>pre-integration-test</phase>-->
+                        <goals>
+                             <goal>start</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.example.Application</mainClass>
+                            <classesDirectory>../example/target/classes</classesDirectory>
+                             <!--<folders>../example/target/classes</folders>-->
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>deploy-stop</id>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                        <configuration>
+                            <skip>true</skip>
                         </configuration>
                     </execution>
                 </executions>
