--- a/it/pom.xml
+++ b/it/pom.xml
@@ -22,16 +22,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.196</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>example</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -41,6 +41,7 @@
         </dependency>
     </dependencies>
     <build>
+        <sourceDirectory>../example/src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -99,62 +100,27 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
                 <configuration>
                     <skip>true</skip>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>deploy</id>
-                        &lt;!&ndash;<phase>pre-integration-test</phase>&ndash;&gt;
-                        <goals>
-                            <goal>run</goal>
-                            &lt;!&ndash; <goal>start</goal> &ndash;&gt;
-                        </goals>
-                        <configuration>
-                            <classesDirectory>../example/target/classes</classesDirectory>
-                            &lt;!&ndash; <folders>../example/target/classes</folders> &ndash;&gt;
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.example</groupId>
-                        <artifactId>softdelete</artifactId>
-                        <version>1.0.0-SNAPSHOT</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <testIncludes>
-                        <testInclude>softdelete</testInclude>
-                    </testIncludes>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                    <mainClass>com.example.Application</mainClass>
-                </configuration>
                 <executions>
                     <execution>
-                        <id>deploy-start</id>
-                        <!--<phase>pre-integration-test</phase>-->
+                        <id>pre-integration-test</id>
                         <goals>
                              <goal>start</goal>
                         </goals>
                         <configuration>
+                            <skip>false</skip>
                             <mainClass>com.example.Application</mainClass>
                             <classesDirectory>../example/target/classes</classesDirectory>
-                             <!--<folders>../example/target/classes</folders>-->
                         </configuration>
                     </execution>
 
@@ -164,7 +130,22 @@
                             <goal>stop</goal>
                         </goals>
                         <configuration>
-                            <skip>true</skip>
+                            <skip>false</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                        <configuration>
+                            <skip>false</skip>
                         </configuration>
                     </execution>
                 </executions>
