--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -9,7 +9,11 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
-
+    properties:
+      javax:
+        persistence:
+          validation:
+            mode: none
 ---
 profiles: mysql
 spring:
